--- a/Programación 1/TP Arreglos/ejercicio8.html
+++ b/Programación 1/TP Arreglos/ejercicio8.html
@@ -28,8 +28,7 @@
         console.log(element[0])
     });*/
     for (let i of lista) {
-        console.log(i)
-        
+        document.getElementById("muestra").innerHTML = `<div>${i}</div>`
     }
 </script>
 </html>
