--- a/Proyecto_practica/index.html
+++ b/Proyecto_practica/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <!--<link rel="stylesheet" href="bootstrap/bootstrap.min.css"> -->
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 </head>
 <body>
+    <div class="Success">
+        <h1>Proyecto de Los Chimiqueques</h1>
+        <button type="button" class="btn btn-warning">warning</button>
+    </div>
     
 </body>
 </html>
