TP5a ej1 finalizado

--- a/Programación 1/TP5a/ejercicio1/index.html
+++ b/Programación 1/TP5a/ejercicio1/index.html
@@ -21,9 +21,9 @@
         <input type="number" style="margin-bottom: 10px;" id="a_n"><br>
         <label>Genero:</label><br>
         <input type="text" style="margin-bottom: 10px;" id="genero"><br>
-        <button>Ingresar</button>
+        <button onclick="lectura()">Ingresar y leer</button>
     </div>
-    <div id="rta"></div>
-    <script src="./main.js"></script>
+    <div id="rta" style="margin-top: 10px;"></div>
+    <script src="main.js"></script>
 </body>
 </html>
