--- a/Programación 1/TP5a/ejercicio2/index.html
+++ b/Programación 1/TP5a/ejercicio2/index.html
@@ -15,10 +15,11 @@
             <option value="triangulo">Triangulo</option>
             <option value="circulo">Circulo</option><br>
         </select>
-        <button>Ingresar figura</button>
-        <div class="row">
-            <form id="formulario"></form>
-        </div>
+        <button onclick="check_figura()">Ingresar figura</button>
+        <form id="formulario" style="margin-top: 20px;">
+        </form>
+        <div id="rta"></div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
