Tp - Poo arreglado

--- a/Programación 1/TP5a/ejercicio2/index.html
+++ b/Programación 1/TP5a/ejercicio2/index.html
@@ -16,9 +16,9 @@
             <option value="circulo">Circulo</option><br>
         </select>
         <button onclick="check_figura()">Ingresar figura</button>
-        <form id="formulario" style="margin-top: 20px;">
+        <div id="formulario" style="margin-top: 20px;"></div>
         </form>
-        <div id="rta"></div>
+        <div id="rta" style="margin-top: 10px;"></div>
     </div>
     <script src="main.js"></script>
 </body>
