--- a/Programación 1/TP5a/ejercicio3/index.html
+++ b/Programación 1/TP5a/ejercicio3/index.html
@@ -14,8 +14,8 @@
         <option value="Esfera">Esfera</option>
     </select>
     <button onclick="registro_figura()">Seleccionar</button>
-    <form id="campo" style="margin-top: 10px"></form>
-    <div id="rta"></div>
+    <div id="campo" style="margin-top: 10px"></div>
+    <div id="rta" style="margin-top: 10px"></div>
     <script src="main.js"></script>
 </body>
 </html>
