--- a/Programación 1/Ejercicio P.bis/autos.html
+++ b/Programación 1/Ejercicio P.bis/autos.html
@@ -23,9 +23,9 @@
                 <label>Color</label><br>
                 <input id="color" type="text">
             </div>
-            <div id="adicional"></div>
-            <div class="row col-4" style="margin-top: 5%">
-                <button type="button" class="btn-sm btn-primary">Ingresar</button>
+            <div id="adicional"><br></div>
+            <div class="row col-5" style="margin-top: 5%">
+                <input id="boton" type="button" class="btn-sm btn-primary" onclick="identificar_p_ruedas()" value="Cargar">
             </div>     
         </div>
     </div>
