--- a/Programación 1/TP Final/index.html
+++ b/Programación 1/TP Final/index.html
@@ -17,7 +17,7 @@
         <label>Fecha Nacimiento</label><br>
         <input id="f_nacimiento" type="date"><br>
         <label>Medico</label><br>
-        <input id="medico"><br>
+        <select id="docenf"></select>
         <label>Obra social</label><br>
         <input id="o_social"><br>
         <button id="boton" onclick="">Cargar</button>
