Continuar armando arreglos de doctores

--- a/Programación 1/TP Final/index.html
+++ b/Programación 1/TP Final/index.html
@@ -17,11 +17,12 @@
         <label>Fecha Nacimiento</label><br>
         <input id="f_nacimiento" type="date"><br>
         <label>Medico</label><br>
-        <select id="docenf"></select>
+        <select id="docenf"></select><br>
         <label>Obra social</label><br>
         <input id="o_social"><br>
         <button id="boton" onclick="">Cargar</button>
     </form>
-    <div></div>
+    <div id="informe"></div>
+    <script src="main.js"></script>
 </body>
 </html>
