--- a/Programación 1/TP Final/index.html
+++ b/Programación 1/TP Final/index.html
@@ -9,18 +9,20 @@
 <body>
     <form id="datos_paciente"> <!-- Formulario que obtiene datos de paciente-->
         <label>Nombre</label><br>
-        <input id="nombreC"><br>
+        <input id="nombre"><br>
         <label>Apellido</label><br>
-        <input id="apellidoC"><br>
+        <input id="apellido"><br>
         <label>dni</label><br>
         <input id="dni"><br>
         <label>Fecha Nacimiento</label><br>
         <input id="f_nacimiento" type="date"><br>
         <label>Medico</label><br>
-        <select id="docenf"></select><br>
+        <select id="doc_enf">
+            <option>Seleccionar doctor/enfermero</option>
+        </select><br>
         <label>Obra social</label><br>
         <input id="o_social"><br>
-        <button id="boton" onclick="">Cargar</button>
+        <button id="boton" onclick="carga()">Cargar</button>
     </form>
     <div id="informe"></div>
     <script src="main.js"></script>
